--- a/index.css
+++ b/index.css
@@ -1,146 +1,67 @@
-/* 
-body{
-    font-size: 1rem;
-    line-height: 1.7;
-    color: #5b6a6f;
-    margin: 0;
-    padding: 0;
-    font-family: 'Sarabun' sans-serif;
-    letter-spacing: 0px;
-}
-.container{
-    max-width: 1040px;
-    margin: auto;
-    padding:0px 18px;
-}
-.color-dark{
-   color: #2c3e44;
-}
- nav a{
-    font-size: 1.15rem;
- }
- .flex{
-    display: flex;
- }
- .flex-col{
-   flex-direction: column;
- }
- .justify-content-center{
-    justify-content: center;
- }
- .justify-content-between{
-    justify-content: space-between;
- }
- .align-center{
-    align-items: center;
- }
- .list-type-none{
-    list-style-type: none;
- }
-header{
-    position: sticky !important;
-    top: 0px;
-    width: 100vw;
-    background-color: rgba(250, 252, 253, 0.95);
-    border-bottom: 0.5px solid #dbe0e2;
-}
- nav{
-    height: 65px;
-    padding: 0px 30px;
-    
-}
- ul{
-    gap: 30px;
-    font-size: 0.9rem;
- }
- 
- ul li:hover{
-    cursor: pointer;
-    color:#2c3e44
- }
-.hero{
-    width: 100%;
-    height: auto;
-    margin-top: 30px;
- }
- .hero > div{ 
-    width : 45%
- }
- .hero-music{
-
- }
-
- .hero-heading{
-    font-size: 3.4rem;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 400;
-    line-height: 1.3;
-    margin-top: 0px;
- }
- .hero-img{
-    border-radius: 15px;
-    box-shadow:  8px 8px 12px rgba(0, 0, 0, 0.2);
-    width: 340px;
- }
- .music-player{
-    width: 420px;
-    height: 112px;
-    background-color: #FFFFFF;
-    border: 0.5px solid #DBE0E2;
-    border-radius: 8px;
-    padding: 1rem 2rem;
-    margin: 30px 0px;
-    gap: 15px;
- }
- .icon{
-   color: white;
- }
- .playpausebutton{
-   width:44px;
-   height: 44px;
-   background-color: #5b7a8a;
-   border-radius: 50%;
-   
- }
- button{
-   background-color: #5b7a8a;
-   padding: 15px 22px;
-   outline: none;
-   border: none;   
-   border-radius: 5px;
-}
-.btn1{
-   color: white;
-}
-.btn2{
-   background-color: transparent;
-   border: 0.5px solid #dbe0e2;;
-}
-.music-info{
-   width: 350px;
-   height: 100%;
-} */
-
-
 @import "tailwindcss";
 
-   .url-design{
-      @apply hover:text-[#2c3e44] hover:cursor-pointer;
-   }
-   
-body{
+.url-design {
+   @apply hover:text-[#2c3e44] hover:cursor-pointer;
+}
+
+body {
    font-family: 'Sarabun' sans-serif;
 }
 
-@layer base{
-   .my-container{
+.wave{
+   height: 40px;
+   width: 4px;
+   background-color: rgb(87, 87, 87);
+   animation: wave 1.5s ease-in infinite alternate;
+   position: relative;
+   bottom: 10px;
+}
+@keyframes wave {
+  0%,
+  40%,
+  100% {
+    transform: scaleY(0.3);
+  }
+  20% {
+    transform: scaleY(1);
+  }
+}
+
+.wave:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.wave:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.wave:nth-child(4) {
+  animation-delay: 0.1s;
+}
+.wave:nth-child(5) {
+  animation-delay: 0.2s;
+}
+.wave:nth-child(6) {
+  animation-delay: 0.1s;
+}
+.wave:nth-child(7) {
+  animation-delay: 0.2s;
+}
+.wave:nth-child(8) {
+  animation-delay: 0.1s;
+}
+.wave:nth-child(9) {
+  animation-delay: 0.2s;
+}
+@layer base {
+   .my-container {
       @apply max-w-[1100px] m-auto px-5;
    }
-   .primary-button{
+
+   .primary-button {
       @apply py-4 px-6 bg-[#607b84] text-white text-sm rounded-md mr-5 hover:bg-gray-600 hover:cursor-pointer;
    }
-   .secondary-button{
-      @apply py-4 px-6  text-sm  border border-gray-200 rounded-md hover:border hover:border-gray-600 hover:cursor-pointer;
+
+   .secondary-button {
+      @apply py-4 px-6 text-sm border border-gray-200 rounded-md hover:border hover:border-gray-600 hover:cursor-pointer;
    }
 
 }
